@@ -1,7 +1,10 @@
 Change Log
 =============
+2010/04/28 (setup.py 0.2.1)
+ - Allow database connection initialization at the begning of every connetion through Django's connection_created signals
+
 2010/03/26 (setup.py 0.2.0)
- - Support for Django-1.2
+ - Added support for Django-1.2
  - Backward compatibility - Same codebase works with Django 1.0.x, 1.1.x and 1.2
  - Exact look-up for LOB fields upto 4k Chars of data 
  - added tablespace_sql method in operations.DatabaseOperations
